parsing projects.json into pages, fixed overflow issues

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,3 +26,7 @@ body {
     text-wrap: balance;
   }
 }
+
+.project-desc-attachment {
+  display: inline-block;
+}
